# flask-api-poetry-boilerplate

./: .flaskenv.sample  .gitignore  Dockerfile  README.md  application.py  docker-compose-devcontainer.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: deploy_staging.yml
coffee/: views.py
coffee_app/: application.py  manage.py
coffee_app/tests/: conftest.py  test_coffee.py
my-api/: Dockerfile  pyproject.toml  settings.toml
my-api/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
my-api/my_api/: application.py  db_init.py  manage.py  wsgi.py
my-api/my_api/api_1_0/: api.py  decorators.py  utils.py
my-api/my_api/api_1_0/user/: models.py  resources.py  schema.py
my-api/my_api/home_app/: views.py
my-api/my_api/migrations/: env.py
my-api/my_api/migrations/versions/: 4bb79a742c30_added_user_uid.py  622a48888dca_added_user_roles.py  87b7ca4b36f1_create_user_table.py  99ea39707210_initial_user_table_version.py
my-api/tests/: conftest.py  test_home_app.py
my-api/tests/api_1_0/: test_user.py
my-app/: Dockerfile  README.md  pyproject.toml  settings.toml
my-app/my_app/: .flaskenv.sample  application.py  manage.py  settings.py  wsgi.py
my-app/my_app/home_app/: views.py
my-app/my_app/static/: base.css
my-app/tests/: conftest.py  test_home_app.py
tests/: conftest.py
