[tool.poetry]
name = "my-api"
version = "0.1.0"
description = "A starter, boilerplate repo for all new Python-Flask API projects."
authors = ["Jorge Escobar <jorge@emersoncollective.com>"]
packages = [{include = "my_api"}]

[tool.poetry.dependencies]
python = "~3.10"
flask = "^2.2.2"
pytest = "^7.2.1"
gunicorn = "^20.1.0"
dynaconf = "^3.1.12"
psycopg2-binary = "^2.9.6"
flask-migrate = "^4.0.4"
flask-sqlalchemy = "^3.0.3"
marshmallow = "^3.19.0"
marshmallow-sqlalchemy = "^0.29.0"
flask-restx = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
black = {version = "^23.1a1", allow-prereleases = true}
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGE CONTROL"]
disable = [
    "C0415", # Disable Import outside toplevel
]
